expanded ReflowOven data structure

--- a/Proj1/Android/Reflow/res/layout/activity_main_screen.xml
+++ b/Proj1/Android/Reflow/res/layout/activity_main_screen.xml
@@ -87,14 +87,32 @@
         android:layout_alignLeft="@+id/textView1"
         android:layout_alignParentRight="true" />
 
+    <TextView
+        android:id="@+id/textView4"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/button1"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="29dp"
+        android:text="@string/currentState"
+        android:textAppearance="?android:attr/textAppearanceSmall" />
+
+    <TextView
+        android:id="@+id/currentState"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/textView4"
+        android:layout_centerHorizontal="true"
+        android:text="@string/currentState"
+        android:textAppearance="?android:attr/textAppearanceLarge" />
+
     <Button
         android:id="@+id/button1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_above="@+id/progressBar1"
         android:layout_alignParentLeft="true"
+        android:layout_alignParentTop="true"
         android:layout_alignRight="@+id/progressBar1"
-        android:layout_marginBottom="81dp"
         android:text="@string/viewGraph" />
 
 </RelativeLayout>
