--- a/Proj1/Android/Reflow/res/layout/activity_graph_view.xml
+++ b/Proj1/Android/Reflow/res/layout/activity_graph_view.xml
@@ -13,8 +13,8 @@
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
         android:layout_alignParentBottom="true"
-        android:layout_alignParentLeft="true"
         android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
         android:orientation="vertical" >
 
     </LinearLayout>
