--- a/Proj1/Android/Reflow/res/layout/activity_main_screen.xml
+++ b/Proj1/Android/Reflow/res/layout/activity_main_screen.xml
@@ -94,7 +94,7 @@
         android:id="@+id/textView4"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/button1"
+        android:layout_below="@+id/refresh"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="29dp"
         android:text="@string/currentState"
@@ -110,12 +110,14 @@
         android:textAppearance="?android:attr/textAppearanceLarge" />
 
     <Button
-        android:id="@+id/button1"
+        android:id="@+id/refresh"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
         android:layout_alignParentTop="true"
         android:layout_alignRight="@+id/progressBar1"
         android:text="@string/viewGraph" />
+
+   
 
 </RelativeLayout>
