Added autorotation to graph screen

--- a/Proj1/Android/Reflow/res/layout/activity_graph_view.xml
+++ b/Proj1/Android/Reflow/res/layout/activity_graph_view.xml
@@ -15,7 +15,7 @@
         android:layout_alignParentBottom="true"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        android:orientation="vertical" >
+        android:orientation="horizontal" >
 
     </LinearLayout>
 
