--- a/Proj1/Android/Reflow/res/layout/activity_main_screen.xml
+++ b/Proj1/Android/Reflow/res/layout/activity_main_screen.xml
@@ -16,30 +16,12 @@
         android:layout_alignEnd="@dimen/activity_vertical_margin"
         android:layout_alignParentEnd="false"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentRight="true"
         android:layout_alignParentStart="false"
+        android:layout_alignRight="@+id/toggleButton1"
         android:layout_marginLeft="16dp"
         android:ems="10"
         android:inputType="number"
-        android:text="@string/default_reflow_temp" />
-
-    <TextView
-        android:id="@+id/textView1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_above="@+id/editSTemp"
-        android:layout_alignLeft="@+id/editSTemp"
-        android:text="@string/Soak_temp"
-        android:textAppearance="?android:attr/textAppearanceSmall" />
-
-    <TextView
-        android:id="@+id/textView2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_above="@+id/editSTime"
-        android:layout_alignLeft="@+id/editSTime"
-        android:text="@string/Soak_time"
-        android:textAppearance="?android:attr/textAppearanceSmall" />
+        android:text="@string/default_max_temp" />
 
     <TextView
         android:id="@+id/textView3"
@@ -50,28 +32,6 @@
         android:text="@string/Max_temp"
         android:textAppearance="?android:attr/textAppearanceSmall" />
 
-    <EditText
-        android:id="@+id/editSTime"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_above="@+id/textView3"
-        android:layout_alignLeft="@+id/textView3"
-        android:layout_alignParentRight="true"
-        android:ems="10"
-        android:inputType="number"
-        android:text="@string/default_soak_time" />
-
-    <EditText
-        android:id="@+id/editSTemp"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_above="@+id/textView2"
-        android:layout_alignLeft="@+id/textView2"
-        android:layout_alignParentRight="true"
-        android:ems="10"
-        android:inputType="number"
-        android:text="@string/default_soak_temp" />
-
     <ToggleButton
         android:id="@+id/toggleButton1"
         android:layout_width="wrap_content"
@@ -81,6 +41,94 @@
         android:textOff="@string/toggle_off" 
 		android:textOn="@string/toggle_on"/>
 
+    <Button
+        android:id="@+id/refresh"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentTop="true"
+        android:text="@string/viewGraph" />
+
+    <EditText
+        android:id="@+id/reflowTime"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/textView3"
+        android:layout_alignLeft="@+id/textView3"
+        android:ems="10"
+        android:inputType="number"
+        android:text="@string/default_reflow_time" />
+
+    <TextView
+        android:id="@+id/textView6"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/reflowTime"
+        android:layout_alignRight="@+id/textView5"
+        android:text="@string/reflow_time"
+        android:textAppearance="?android:attr/textAppearanceSmall" />
+
+    <EditText
+        android:id="@+id/reflowTemp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/textView6"
+        android:layout_alignLeft="@+id/textView5"
+        android:ems="10"
+        android:inputType="number"
+        android:text="@string/default_reflow_temp" >
+
+        <requestFocus />
+    </EditText>
+
+    <TextView
+        android:id="@+id/textView5"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/reflowTemp"
+        android:layout_alignLeft="@+id/editSTime"
+        android:text="@string/reflow_temp"
+        android:textAppearance="?android:attr/textAppearanceSmall" />
+
+    <EditText
+        android:id="@+id/editSTime"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/textView5"
+        android:layout_alignLeft="@+id/reflowTime"
+        android:ems="10"
+        android:inputType="number"
+        android:text="@string/default_soak_time" />
+
+    <TextView
+        android:id="@+id/textView2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/editSTime"
+        android:layout_alignLeft="@+id/editSTime"
+        android:text="@string/Soak_time"
+        android:textAppearance="?android:attr/textAppearanceSmall" />
+
+    <EditText
+        android:id="@+id/editSTemp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/textView2"
+        android:layout_alignLeft="@+id/textView2"
+        android:ems="10"
+        android:inputType="number"
+        android:text="@string/default_soak_temp" />
+
+    <TextView
+        android:id="@+id/textView1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/editSTemp"
+        android:layout_alignLeft="@+id/editSTemp"
+        android:text="@string/Soak_temp"
+        android:textAppearance="?android:attr/textAppearanceSmall" />
+
     <ProgressBar
         android:id="@+id/progressBar1"
         style="?android:attr/progressBarStyleHorizontal"
@@ -88,36 +136,24 @@
         android:layout_height="wrap_content"
         android:layout_above="@+id/textView1"
         android:layout_alignLeft="@+id/textView1"
-        android:layout_alignParentRight="true" />
-
-    <TextView
-        android:id="@+id/textView4"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/refresh"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="29dp"
-        android:text="@string/currentState"
-        android:textAppearance="?android:attr/textAppearanceSmall" />
+        android:layout_alignRight="@+id/refresh" />
 
     <TextView
         android:id="@+id/currentState"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/textView4"
+        android:layout_above="@+id/progressBar1"
         android:layout_centerHorizontal="true"
         android:text="@string/currentState"
         android:textAppearance="?android:attr/textAppearanceLarge" />
 
-    <Button
-        android:id="@+id/refresh"
+    <TextView
+        android:id="@+id/textView4"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentTop="true"
-        android:layout_alignRight="@+id/progressBar1"
-        android:text="@string/viewGraph" />
-
-   
+        android:layout_above="@+id/currentState"
+        android:layout_centerHorizontal="true"
+        android:text="@string/currentState"
+        android:textAppearance="?android:attr/textAppearanceSmall" />
 
 </RelativeLayout>
