SPI data acquisition
Temperature data is now taken from spi string. There is a second series
on the graph, the ideal temperature.

--- a/Proj1/Android/Reflow/res/layout/activity_graph_view.xml
+++ b/Proj1/Android/Reflow/res/layout/activity_graph_view.xml
@@ -23,8 +23,17 @@
         android:id="@+id/tempa"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_alignLeft="@+id/graph1"
         android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
+        android:text="Medium Text"
+        android:textAppearance="?android:attr/textAppearanceMedium" />
+
+    <TextView
+        android:id="@+id/tempi"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignBottom="@+id/tempa"
+        android:layout_alignParentRight="true"
         android:text="Medium Text"
         android:textAppearance="?android:attr/textAppearanceMedium" />
 
